<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
    android:layout_height="match_parent"
tools:context="com.example.klaas.lastminuteonequestionquiz.MainActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/_text"
            style="@style/BasicText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/name_text" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textCapWords|textPersonName" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/image_description"
        app:srcCompat="@drawable/tintin_cast" />

    <TextView
        android:id="@+id/question_header1"
        style="@style/QuestionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1_header" />

    <TextView
        android:id="@+id/question_description1"
        style="@style/QuestionDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1_description" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question1_answer1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question1_answer2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question1_answer3" />
    </RadioGroup>

    <TextView
        android:id="@+id/question2_header"
        style="@style/QuestionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2_header" />

    <TextView
        android:id="@+id/question_description2"
        style="@style/QuestionDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2_description" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question2_answer1" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question2_answer2" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question2_answer3" />

    </RadioGroup>

    <TextView
        android:id="@+id/question3_header"
        style="@style/QuestionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3_header" />

    <TextView
        android:id="@+id/question3_description"
        style="@style/QuestionDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3_description" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question3_answer1" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question4_answer2" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question4_answer3" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question3_answer4" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question3_answer5" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question3_answer6" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question3_answer7" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question3_answer8" />

    <TextView
        android:id="@+id/question_header4"
        style="@style/QuestionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question4_header" />

    <TextView
        android:id="@+id/question_description4"
        style="@style/QuestionDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question4_description" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question4_answer1" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question4_answer2" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question4_answer3" />
    </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_text" />

</LinearLayout>

</ScrollView>
